k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idurar-crm
  labels:
    name: idurar-crm
    app: idurar-erp-crm
